--- a/src/index.css
+++ b/src/index.css
@@ -8,7 +8,8 @@
   --breakpoint-3xl: 120rem;
   --color-footer-100: #1F2937;
   --color-footer-200: #111826;
-  --color-nav-bg: #191a1c;
+  --color-nav-bg: #00000079;
+  --color-phone-nav-bg: #000000;
   --color-light: #FFFFFF;
   --color-avocado-400: oklch(0.92 0.19 114.08);
   --color-avocado-500: oklch(0.84 0.18 117.33);
