--- a/src/index.css
+++ b/src/index.css
@@ -17,6 +17,8 @@
   --ease-fluid: cubic-bezier(0.3, 0, 0, 1);
   --ease-snappy: cubic-bezier(0.2, 0, 0, 1);
   --background-image-bistro-banner: url("https://i.postimg.cc/kX6ftrkR/chef-service.jpg");
+  --background-image-feature-bg: url("https://i.postimg.cc/fLzg3vDC/featured.jpg");
+
 
 }
 
