The shop has been done

--- a/src/index.css
+++ b/src/index.css
@@ -25,3 +25,22 @@
 .active{
   color: yellow;
 }
+
+
+.react-tabs__tab--selected {
+  color: rgb(255, 149, 0) !important;
+  border-top: none !important;
+  border-left: none !important;
+  border-right: none !important;
+  border-bottom: 3px solid rgb(255, 149, 0) !important;
+  /* color:#151515; */
+}
+.react-tabs__tab {
+  
+  font-size: 1.5rem;
+  font-weight: 500;  
+  padding: 10px 0px 5px 0px;
+  margin: 0px 10px 0px 10px;
+  cursor: pointer;
+  outline: none !important;
+}
