login and register page design has been done

--- a/src/index.css
+++ b/src/index.css
@@ -18,6 +18,7 @@
   --ease-snappy: cubic-bezier(0.2, 0, 0, 1);
   --background-image-bistro-banner: url("https://i.postimg.cc/kX6ftrkR/chef-service.jpg");
   --background-image-feature-bg: url("https://i.postimg.cc/fLzg3vDC/featured.jpg");
+  --background-image-authention-bg: url("https://i.postimg.cc/fLzg3vDC/featured.jpg");
 
 
 }
