stripe payment has been done

--- a/src/index.css
+++ b/src/index.css
@@ -11,7 +11,7 @@
   --color-nav-bg: #00000079;
   --color-phone-nav-bg: #000000;
   --color-light: #FFFFFF;
-  --color-dashboard-bg:'#c2914e';
+  --color-dashboard-bg:#c2914e;
   --color-avocado-400: oklch(0.92 0.19 114.08);
   --color-avocado-500: oklch(0.84 0.18 117.33);
   --color-avocado-600: oklch(0.53 0.12 118.34);
